feat(identity): adapted tests for latest changes to local groups and users;